Update src/main/java/org/opentripplanner/openstreetmap/model/OSMWithTags.java
Co-authored-by: Leonard Ehrenfried <mail@leonard.io>